Working, final build

--- a/Main.storyboard
+++ b/Main.storyboard
@@ -199,6 +199,9 @@
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="purchaseArticle:" destination="lZ5-xr-PVT" eventType="touchUpInside" id="y8C-hH-cbh"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <constraints>
@@ -232,7 +235,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="actionButton" destination="uV6-5u-Nrk" id="Rnf-It-c1g"/>
                         <outlet property="blurView" destination="un1-on-961" id="scJ-Sf-hWP"/>
                         <outlet property="webArticle" destination="OOx-MC-H6j" id="sZk-Hk-qcN"/>
                     </connections>
@@ -451,27 +453,25 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="RTo-ho-M06" detailTextLabel="iys-Ow-g86" style="IBUITableViewCellStyleSubtitle" id="Gzt-pA-AKu">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="8rn-pc-pkL" style="IBUITableViewCellStyleDefault" id="Gzt-pA-AKu">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzt-pA-AKu" id="XF2-xC-DBP">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Article" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RTo-ho-M06">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8rn-pc-pkL">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Purchased Date:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iys-Ow-g86">
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="yo0-xz-ByH" id="Zoj-VJ-ic4"/>
+                                    <outlet property="delegate" destination="yo0-xz-ByH" id="Ffw-km-Ive"/>
+                                </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sl6-PH-tW8">
                                 <rect key="frame" x="10" y="567" width="20" height="21"/>
@@ -496,12 +496,14 @@
                     <navigationItem key="navigationItem" id="UTf-1q-S5R"/>
                     <connections>
                         <outlet property="articleButton" destination="7lN-mW-qkf" id="aQo-tC-fMA"/>
+                        <outlet property="purchasedTable" destination="nwt-HO-gLQ" id="PC9-qi-7Sv"/>
                         <outlet property="tokenCounter" destination="sl6-PH-tW8" id="gy9-4Z-62g"/>
+                        <segue destination="lZ5-xr-PVT" kind="show" identifier="webSegue" id="vm5-1G-FHD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Bn-8Y-bcu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1922" y="1899"/>
+            <point key="canvasLocation" x="2622" y="1843"/>
         </scene>
         <!--Store View Controller-->
         <scene sceneID="nfP-UN-dDV">
@@ -864,8 +866,8 @@
         <image name="home160.png" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ZuQ-jW-sua"/>
-        <segue reference="Qub-Sh-r02"/>
         <segue reference="tdQ-gj-FM3"/>
+        <segue reference="vm5-1G-FHD"/>
+        <segue reference="K3u-cm-6as"/>
     </inferredMetricsTieBreakers>
 </document>
